2006-12-08  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Bugfix

2006-12-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster_odbc.erl: Better error handling

	* src/web/ejabberd_http_poll.erl: Minor fix

2006-12-04  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_loglevel.erl: Preliminary dynamic loglevel support.
	Debug can be enabled with the command "ejabberd_loglevel:set(5)".
	* src/ejabberd_app.erl: Likewise.
	* src/ejabberd.hrl: Likewise (More log levels are now supported).
	* src/ram_file_io_server.erl: Likewise (Needed to dynamically
	recompile the error logger).

2006-12-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_receiver.erl: Bugfix

2006-11-30  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_proxy65/mod_proxy65_services.erl: We now try to get the
	address of the component (if registered in DNS) or otherwise get the
	IP of the XMPP domain.

2006-11-29  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_logger_h.erl: Removed useless comments.

2006-11-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_proxy65/mod_proxy65_services.erl: Now using all interfaces as
        default value for proxy listen parameter.

	* src/ejabberd_c2s.erl: User login in with negative priority must not
	receive offline messages (Thanks to Badlop).

2006-11-24  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Fixed regexp ACL configuration examples
	(Thanks to Massimiliano Mirra).
	
	* src/muc/mod_muc_room.erl: API improvement. It is now possible
	to read and write a room config from a developer module (Thanks
	to Massimiliano Mirra).

2006-11-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/eldap/eldap.erl: Bugfix (thanks to Evgeniy Khramtsov)

	* src/ejabberd_sm.erl: The max_user_sessions option is now
	configured via access rule
	* src/ejabberd.cfg.example: Likewise

2006-11-20  Mickael Remond  <mickael.remond@process-one.net>
