@@ -1,5 +1,7 @@
 2006-12-08  Alexey Shchepin  <alexey@sevcom.net>
 
+	* src/ejabberd_receiver.erl: Bugfix
+
 	* src/ejabberd_c2s.erl: Bugfix
 
 2006-12-05  Alexey Shchepin  <alexey@sevcom.net>
